fix: swagger endpoints
